<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Shaman</string>

  <!-- Label for this authenticator -->
  <string name="account_label">Weave</string>


  <string name="account_action">Account</string>
  <string name="reset_action">Reset</string>
  <string name="resync_action">Resync</string>
  <string name="settings_action">Preferences</string>
  

  <string name="ng_no_items">No items found to display</string>

  <string name="preferences">Settings</string>

  <string name="pref_sync_on_open_title">Sync On Open</string>
  <string name="pref_sync_on_open_summary">Synchronize on application open</string>

  <string name="pref_server_url_title">Server</string>
  <string name="pref_server_url_summary">The URL for the server</string>
  <string name="pref_server_url_default">https://auth.services.mozilla.com/</string>

  <string name="pref_username_title">Username</string>
  <string name="pref_username_summary">The Username</string>

  <string name="pref_password_title">Password</string>
  <string name="pref_password_summary">The Password</string>

  <string name="pref_sync_key_title">Sync Key</string>
  <string name="pref_sync_key_summary">The Sync Key</string>
    
  <string name="pref_sync_period_title">Sync Period</string>
  <string name="pref_sync_period_summary">Time between synchronization attempts</string>
  <string name="pref_sync_period_dialog_title">Sync Period</string>

  <string-array name="pref_sync_period_entries">
    <item>1 hour</item>
    <item>3 hours</item>
    <item>6 hours</item>
    <item>12 hours</item>
    <item>1 day</item>
  </string-array>

  <!-- Preference title -->
  <string name="pref_accept_invalid_certs_title">Accept all certs</string>

  <!-- Preference summary for lock on screen lock -->
  <string name="pref_accept_invalid_certs_summary">Accept all SSL certificates</string>

  <!-- Preference title: use a numeric keypad to enter the password -->
  <string name="pref_title_keypad">Keypad</string>

  <!-- Preference summary: for a numeric keypad -->
  <string name="pref_summary_keypad">Use a keypad to enter Master Password</string>

  <string name="bookmark_provider_authority">org.emergent.android.weave.bookmarkcontentprovider</string>
  <string name="password_provider_authority">org.emergent.android.weave.passwordcontentprovider</string>
  <string name="bookmark_provider_label">Bookmarks</string>
  <string name="password_provider_label">Passwords</string>
  <string name="weave_provider_label">Weave Data</string>

  <string name="notification_login_error">Touch to sign into your Weave SyncAdapter account.</string>

  <!-- Title string for Login activity-->
  <string name="ui_activity_title">Sign-in</string>
  <!-- Message shown in progress dialog while app connects to the server -->
  <string name="ui_activity_authenticating">Authenticating\u2026</string>

  <!-- AuthenticatorActivity -->
  <skip/>
  <!-- Label above username EditText -->
  <string name="login_activity_username_label">Username</string>
  <!-- Label above password EditText -->
  <string name="login_activity_password_label">Password</string>
  <string name="login_activity_secret_label">Secret</string>

  <string name="login_activity_serverurl_label">Server URL</string>

  <!-- Button to sign in after entering username and password -->
  <string name="login_activity_ok_button">Sign in</string>

  <!-- Message shown in dialog if the server is invalid -->
  <string name="login_activity_loginfail_text_server">The server URL isn\'t valid. Please try again or leave blank for the default.</string>
  <!-- Message shown in dialog if the username or password is invalid. -->
  <string name="login_activity_loginfail_text_both">The username or password isn\'t valid. A Weave SyncAdapter account is required. Please try again.</string>
  <!-- Message shown in dialog if the password is invalid -->
  <string name="login_activity_loginfail_text_pwonly">You entered the wrong password or your account has changed. Please re-enter your password.</string>
  <!-- Message shown in dialog to prompt the user for their password -->
  <string name="login_activity_loginfail_text_pwmissing">Type the password for this account.</string>
  <!-- Message shown in dialog to prompt the user for their password -->
  <string name="login_activity_loginfail_text_secretmissing">Type the encryption secret for this account.</string>

  <!-- Message shown in dialog to handle unknown errors -->
  <string name="login_activity_loginfail_text_unknown">There was an unknown problem validating your account info.</string>


  <!-- Message shown if the provided account doesn't support the current activity. -->
  <string name="login_activity_newaccount_text">Sign in to your Weave account.</string>

  <!-- Button that takes the user to the "sign in" screen -->
  <string name="sign_in_button_label">Sign in</string>
  <!-- Button for going to the previous screen or step -->
  <string name="back_button_label">Back</string>
  <!-- Button to cancel the current operation -->
  <string name="cancel_button_label">Cancel</string>
  <string name="profile_action">Weave profile</string>
  <string name="view_profile">View Profile</string>

  <string name="appopts_activity_title">Shaman Application Preferences</string>
  <string name="login_activity_custom_server_button">Use custom server</string>

  <string-array name="account_setup_login_server_optarray">
    <item>Use a custom server</item>
    <item>Firefox Sync Server</item>
  </string-array>
  <string-array name="account_setup_login_server_optarray_values">
    <item>CUSTOM</item>
    <item>https://auth.services.mozilla.com/</item>
  </string-array>
  <string name="login_activity_server_spinner_prompt">Select the server</string>
  <string name="next_action">Next</string>
  <string name="login_activity_server_hint">Server URL</string>
  <string name="login_activity_username_hint">User Name</string>
  <string name="login_activity_password_hint">Password</string>
  <string name="login_activity_secret_hint">Sync Key</string>
  <string name="save_action">Save</string>
  <!--  Button name used to confirm acceptance of dialog boxes, warnings, errors, etc. -->
  <string name="okay_action">OK</string>
  <!--  Button name used to cancel out of dialog boxes -->
  <string name="cancel_action">Cancel</string>
  <!--  Button name used to complete a multi-step process -->
  <string name="done_action">Done</string>
  <!-- Menu item/button name -->
  <string name="discard_action">Discard</string>

  <!-- EULA -->
  <string name="eula_title">Shaman EULA</string>
  <string name="eula_accept">Accept</string>
  <string name="eula_refuse">Cancel</string>

  <string name="current_page">from\u0020</string>
  

</resources>
