<?xml version="1.0" encoding="utf-8" ?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    >
  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical"
        >
      <TextView
          android:id="@+id/message"
          android:layout_height="wrap_content"
          android:layout_width="fill_parent"
          android:layout_marginBottom="5dip"
          />
      <Spinner
          android:id="@+id/server_spinner"
          android:layout_height="wrap_content"
          android:layout_width="fill_parent"
          android:drawSelectorOnTop="true"
          android:prompt="@string/login_activity_server_spinner_prompt"
          />
      <EditText
          android:id="@+id/serverurl_edit"
          android:singleLine="true"
          android:layout_height="wrap_content"
          android:layout_width="fill_parent"
          android:scrollHorizontally="true"
          android:visible="false"
          android:hint="@string/login_activity_server_hint"
          android:inputType="textUri"
          />
      <EditText
          android:id="@+id/username_edit"
          android:singleLine="true"
          android:layout_height="wrap_content"
          android:layout_width="fill_parent"
          android:scrollHorizontally="true"
          android:hint="@string/login_activity_username_hint"
          android:inputType="textEmailAddress"
          />
      <EditText
          android:id="@+id/password_edit"
          android:singleLine="true"
          android:layout_height="wrap_content"
          android:layout_width="fill_parent"
          android:scrollHorizontally="true"
          android:hint="@string/login_activity_password_hint"
          android:inputType="textPassword"
          />
      <EditText
          android:id="@+id/secret_edit"
          android:singleLine="true"
          android:layout_height="wrap_content"
          android:layout_width="fill_parent"
          android:scrollHorizontally="true"
          android:hint="@string/login_activity_secret_hint"
          android:inputType="textVisiblePassword"
          />
      <TextView
          android:id="@+id/message_bottom"
          android:layout_height="wrap_content"
          android:layout_width="fill_parent"
          android:layout_marginBottom="5dip"
          />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="54dip"
        android:background="@android:drawable/bottom_bar"
        >
      <Button
          android:id="@+id/test_button"
          android:text="@string/cancel"
          android:layout_height="wrap_content"
          android:layout_width="wrap_content"
          android:minWidth="@dimen/button_minWidth"
          android:layout_alignParentLeft="true"
          android:layout_centerVertical="true"
          />
      <Button
          android:id="@+id/next_button"
          android:text="@string/next_action"
          android:layout_height="wrap_content"
          android:layout_width="wrap_content"
          android:minWidth="@dimen/button_minWidth"
          android:drawableRight="@drawable/button_indicator_next"
          android:layout_alignParentRight="true"
          android:layout_centerVertical="true"
          />
    </RelativeLayout>
  </LinearLayout>
</ScrollView>
