<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        >
      <CheckBox
          android:id="@+id/allcerts_checkbox"
          android:text="@string/pref_accept_invalid_certs_summary"
          android:layout_height="wrap_content"
          android:layout_width="match_parent"
          android:defaultValue="false"
          />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="54dip"
        android:background="@android:drawable/bottom_bar"
        >
      <Button
          android:id="@+id/cancel_button"
          android:text="@string/cancel_action"
          android:layout_height="wrap_content"
          android:layout_width="wrap_content"
          android:minWidth="@dimen/button_minWidth"
          android:layout_alignParentLeft="true"
          android:layout_centerVertical="true"
          />
      <Button
          android:id="@+id/save_button"
          android:text="@string/save_action"
          android:layout_height="wrap_content"
          android:layout_width="wrap_content"
          android:minWidth="@dimen/button_minWidth"
          android:layout_alignParentRight="true"
          android:layout_centerVertical="true"
          />
    </RelativeLayout>
  </LinearLayout>
</ScrollView>
